Admob+FB+U+Applovin

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="banner3">ca-app-pub-2518334745896640/3507275831</string>
     <string name="banner4">ca-app-pub-2518334745896640/2784973681</string>
     <string name="banner5">ca-app-pub-2518334745896640/1471892013</string>
+    <string name="banner6">ca-app-pub-2518334745896640/9249036530</string>
 
     <string name="i_ads">ca-app-pub-2518334745896640/8935449063</string>
 
@@ -36,29 +37,28 @@ MB কিনতে <b><font color="#008DFD">*8444#</font></b> অথবা <b><f
 সর্বশেষ কল এর বিবরণ সার্ভিস চালু করতে <b><font color="#008DFD">*8333*1#</font></b>\n\n
 সর্বশেষ কল এর বিবরণ সার্ভিস বন্ধ করতে <b><font color="#008DFD">*8333*2#</font></b> \n\n
 রবি থেকে রবি টাকা ট্রান্সফার করতে টাকার পরিমাণ লিখে পাঠিয়ে দিন <b><font color="#008DFD">1212018********</font></b> \n\n
-বন্ধ সিমের আওতায় কিনা তা জানতে যেকোনো রবি নাম্বার থেকে <b><font color="#008DFD">A 018*********</font></b> লিখে মেসেজ পাঠান <b><font color="#008DFD">8050</font></b> নাম্বারে\n\n
-বিস্তারিত জানতে রবি ওয়েবসাইট এ ভিজিট করুন </string>
+বন্ধ সিমের আওতায় কিনা তা জানতে যেকোনো রবি নাম্বার থেকে <b><font color="#008DFD">A 018*********</font></b> লিখে মেসেজ পাঠান <b><font color="#008DFD">8050</font></b> নাম্বারে </string>
 
 
 
     <string name="robi_minute_offer">
         রবি মিনিট চেক - <b><font color="#009688">*222*2# or *222*3# or *222*8# or *222*9#  (*222*12# sms check) </font></b> \n\n
         15 মিনিট 10 টাকা মেয়াদ 12 ঘন্টা - <b><font color="#147ED3">\n ডায়াল - *0*1# </font></b> \n\n
-        40 মিনিট 27 টাকা মেয়াদ 2 দিন - <b><font color="#147ED3">\n ডায়াল - *0*2# </font></b> \n\n
+        30 মিনিট 20 টাকা মেয়াদ 2 দিন - <b><font color="#147ED3">\n ডায়াল - *0*16# </font></b> \n\n
+        45 মিনিট 29 টাকা মেয়াদ 2 দিন - <b><font color="#147ED3">\n ডায়াল - *0*2# </font></b> \n\n
         50 মিনিট 30 টাকা মেয়াদ 2 দিন - <b><font color="#147ED3">\n ডায়াল - *0*9# </font></b> \n\n
         65 মিনিট 43 টাকা মেয়াদ 4 দিন - <b><font color="#147ED3">\n ডায়াল - *0*3# </font></b> \n\n
         75 মিনিট 50 টাকা মেয়াদ 5 দিন - <b><font color="#147ED3">\n ডায়াল - *0*10# </font></b> \n\n
+        85 মিনিট 59 টাকা মেয়াদ 5 দিন - <b><font color="#147ED3">\n ডায়াল - *0*8# </font></b> \n\n
 
-        85 মিনিট 59 টাকা মেয়াদ 7 দিন - <b><font color="#147ED3">\n ডায়াল - *0*8# </font></b> \n\n
-        95 মিনিট 64 টাকা মেয়াদ 7 দিন - <b><font color="#147ED3">\n ডায়াল - *0*4# </font></b> \n\n
-        155 মিনিট 99 টাকা মেয়াদ 7 দিন - <b><font color="#147ED3">\n ডায়াল - *0*5# </font></b> \n\n
-        170 মিনিট 104 টাকা মেয়াদ 7 দিন - <b><font color="#147ED3">\n ডায়াল - *0*12# </font></b> \n\n
+        100 মিনিট 69 টাকা মেয়াদ 7 দিন - <b><font color="#147ED3">\n ডায়াল - *0*4# </font></b> \n\n
+        150 মিনিট 99 টাকা মেয়াদ 7 দিন - <b><font color="#147ED3">\n ডায়াল - *0*5# </font></b> \n\n
+        200 মিনিট 127 টাকা মেয়াদ 10 দিন - <b><font color="#147ED3">\n ডায়াল - *0*15# </font></b> \n\n
 
-        300 মিনিট 199 টাকা মেয়াদ 30 দিন - <b><font color="#147ED3">\n ডায়াল - *0*14# </font></b> \n\n
-        320 মিনিট 207 টাকা মেয়াদ 30 দিন - <b><font color="#147ED3">\n ডায়াল - *0*6# </font></b> \n\n
+        270 মিনিট 199 টাকা মেয়াদ 30 দিন - <b><font color="#147ED3">\n ডায়াল - *0*14# </font></b> \n\n
+        330 মিনিট 218 টাকা মেয়াদ 30 দিন - <b><font color="#147ED3">\n ডায়াল - *0*12# </font></b> \n\n
         360 মিনিট 220 টাকা মেয়াদ 30 দিন - <b><font color="#147ED3">\n ডায়াল - *0*13# </font></b> \n\n
-        500 মিনিট 307 টাকা মেয়াদ 30 দিন - <b><font color="#147ED3">\n ডায়াল - *0*11# </font></b> \n\n
-        840 মিনিট 507 টাকা মেয়াদ 30 দিন - <b><font color="#147ED3">\n ডায়াল - *0*7# </font></b> </string>
+        500 মিনিট 307 টাকা মেয়াদ 30 দিন - <b><font color="#147ED3">\n ডায়াল - *0*11# </font></b> </string>
 
 
 
@@ -66,55 +66,58 @@ MB কিনতে <b><font color="#008DFD">*8444#</font></b> অথবা <b><f
     <string name="robi_internet_offer">
         এমবি চেক করতে – <b><font color="#009688">\n *3# অথবা *8444*88#</font></b> \n\n
         50 এমবি 5 টাকা মেয়াদ 3 দিন  <b><font color="#147ED3">\n ডায়াল - *123*0010# </font></b>\n\n
-        1 জিবি 41 টাকা মেয়াদ 3 দিন  <b><font color="#147ED3">\n ডায়াল - *123*41# </font></b> \n\n
+        850 MB 41 টাকা মেয়াদ 3 দিন  <b><font color="#147ED3">\n ডায়াল - *123*41# </font></b> \n\n
         1.5 জিবি 57 টাকা মেয়াদ 3 দিন  <b><font color="#147ED3">\n ডায়াল - *123*57# </font></b> \n\n
         3 জিবি 58 টাকা মেয়াদ 3 দিন (Daily 1GB)  <b><font color="#147ED3">\n ডায়াল - *123*58# </font></b> \n\n
         4 জিবি 68 টাকা মেয়াদ 3 দিন  <b><font color="#147ED3">\n ডায়াল - *123*68# </font></b> \n\n
-        10 জিবি 89 টাকা মেয়াদ 3 দিন  <b><font color="#147ED3">\n ডায়াল - *123*89# </font></b> \n\n
+        7 জিবি 89 টাকা মেয়াদ 3 দিন  <b><font color="#147ED3">\n ডায়াল - *123*89# </font></b> \n\n
 
         3 জিবি 114 টাকা মেয়াদ 7 দিন  <b><font color="#147ED3">\n ডায়াল - *123*114# </font></b> \n\n
         5 জিবি 114 টাকা মেয়াদ 7 দিন <b><font color="#147ED3">\n ডায়াল - *123*049# </font></b> \n\n
-        7 জিবি 129 টাকা মেয়াদ 7 দিন  <b><font color="#147ED3">\n ডায়াল - *123*129# </font></b> \n\n
+        5 জিবি 129 টাকা মেয়াদ 7 দিন  <b><font color="#147ED3">\n ডায়াল - *123*129# </font></b> \n\n
+        7 জিবি 148 টাকা মেয়াদ 7 দিন  <b><font color="#147ED3">\n ডায়াল - *123*148# </font></b> \n\n
+        16 জিবি 178 টাকা মেয়াদ 7 দিন  <b><font color="#147ED3">\n ডায়াল - *123*178# </font></b> \n\n
 
-        8 জিবি 299 টাকা মেয়াদ 30 দিন  <b><font color="#147ED3">\n ডায়াল - *123*299# </font></b> \n\n
-        16 জিবি 349 টাকা মেয়াদ 30 দিন  <b><font color="#147ED3">\n ডায়াল - *123*349# </font></b> \n\n
-        20 জিবি 399 টাকা মেয়াদ 30 দিন  <b><font color="#147ED3">\n ডায়াল - *123*399# </font></b> \n\n
-        45 জিবি 497 টাকা মেয়াদ 30 দিন  <b><font color="#147ED3">\n ডায়াল - *123*497# </font></b> \n\n
-        60 জিবি 497 টাকা মেয়াদ 30 দিন  <b><font color="#147ED3">\n ডায়াল - *123*698# </font></b> </string>
+        6 জিবি 299 টাকা মেয়াদ 30 দিন  <b><font color="#147ED3">\n ডায়াল - *123*299# </font></b> \n\n
+        12 জিবি 349 টাকা মেয়াদ 30 দিন  <b><font color="#147ED3">\n ডায়াল - *123*349# </font></b> \n\n
+        18 জিবি 399 টাকা মেয়াদ 30 দিন  <b><font color="#147ED3">\n ডায়াল - *123*399# </font></b> \n\n
+        30 জিবি 497 টাকা মেয়াদ 30 দিন  <b><font color="#147ED3">\n ডায়াল - *123*497# </font></b> \n\n
+        45 জিবি 598 টাকা মেয়াদ 30 দিন  <b><font color="#147ED3">\n ডায়াল - *123*598# </font></b> \n\n
+        60 জিবি 698 টাকা মেয়াদ 30 দিন  <b><font color="#147ED3">\n ডায়াল - *123*698# </font></b> </string>
 
 
 
     <string name="robi_minute_recharge">
         রবি মিনিট চেক - <b><font color="#009688"> *222*2# or *222*3# or *222*8# or *222*9# \n\n</font></b>
-        <b><font color="#147ED3"> 29 টাকায় </font></b>\n 46 মিনিট মেয়াদ - 5 দিন \n\n
+        <b><font color="#147ED3"> 29 টাকায় </font></b>\n 45 মিনিট মেয়াদ - 2 দিন \n\n
 
-        <b><font color="#147ED3"> 49 টাকায় </font></b>\n 80 মিনিট মেয়াদ - 7 দিন \n\n
-        <b><font color="#147ED3"> 65 টাকায় </font></b>\n 95 মিনিট মেয়াদ - 15 দিন \n\n
+        <b><font color="#147ED3"> 49 টাকায় </font></b>\n 75 মিনিট মেয়াদ - 7 দিন \n\n
+        <b><font color="#147ED3"> 65 টাকায় </font></b>\n 95 মিনিট মেয়াদ - 7 দিন \n\n
+        <b><font color="#147ED3"> 69 টাকায় </font></b>\n 100 মিনিট মেয়াদ - 7 দিন \n\n
+
+        <b><font color="#147ED3"> 108 টাকায় </font></b>\n 180 মিনিট মেয়াদ - 7 দিন \n\n
+        <b><font color="#147ED3"> 127 টাকায় </font></b>\n 200 মিনিট মেয়াদ - 7 দিন \n\n
+        <b><font color="#147ED3"> 146 টাকায় </font></b>\n 210 মিনিট মেয়াদ - 15 দিন \n\n
 
         <b><font color="#147ED3"> 109 টাকায় </font></b>\n 165 মিনিট মেয়াদ - 30 দিন \n\n
-        <b><font color="#147ED3"> 169 টাকায় </font></b>\n 230 মিনিট মেয়াদ - 30 দিন \n\n
-
-        <b><font color="#147ED3"> 199 টাকায় </font></b>\n 300 মিনিট মেয়াদ - 30 দিন\n\n
-        <b><font color="#147ED3"> 298 টাকায় </font></b>\n 480 মিনিট মেয়াদ - 30 দিন\n\n
-
-        <b><font color="#147ED3"> 307 টাকায় </font></b>\n 500 মিনিট মেয়াদ - 30 দিন \n\n
-        <b><font color="#147ED3"> 398 টাকায় </font></b>\n 650 মিনিট মেয়াদ - 30 দিন \n\n
-        <b><font color="#147ED3"> 507 টাকায় </font></b>\n 840 মিনিট মেয়াদ - 30 দিন </string>
+        <b><font color="#147ED3"> 169 টাকায় </font></b>\n 220 মিনিট মেয়াদ - 30 দিন \n\n
+        <b><font color="#147ED3"> 307 টাকায় </font></b>\n 500 মিনিট মেয়াদ - 30 দিন </string>
 
 
 
     <string name="robi_internet_recharge">
         এমবি চেক করতে – <b><font color="#009688">\n *3# অথবা *8444*88# </font></b> \n\n
-       1.6 জিবি <b><font color="#147ED3"> 39 টাকা </font></b> মেয়াদ 3 দিন \n\n
+       1.5 জিবি <b><font color="#147ED3"> 39 টাকা </font></b> মেয়াদ 3 দিন \n\n
        3 জিবি (Daily 1 GB) <b><font color="#147ED3"> 58 টাকা </font></b> মেয়াদ 3 দিন \n\n
        4 জিবি <b><font color="#147ED3"> 68 টাকা </font></b> মেয়াদ 3 দিন \n\n
-       8 জিবি <b><font color="#147ED3"> 89 টাকা </font></b> মেয়াদ 3 দিন \n\n
+       7 জিবি <b><font color="#147ED3"> 89 টাকা </font></b> মেয়াদ 3 দিন \n\n
 
-       4 জিবি <b><font color="#147ED3"> 114 টাকা </font></b> মেয়াদ 7 দিন \n\n
+       3 জিবি <b><font color="#147ED3"> 114 টাকা </font></b> মেয়াদ 7 দিন \n\n
        7 জিবি <b><font color="#147ED3"> 129 টাকা </font></b> মেয়াদ 7 দিন \n\n
        10 জিবি <b><font color="#147ED3"> 148 টাকা </font></b> মেয়াদ 7 দিন \n\n
+       16 জিবি <b><font color="#147ED3"> 178 টাকা </font></b> মেয়াদ 7 দিন \n\n
 
-       10 জিবি <b><font color="#147ED3"> 299 টাকা </font></b> মেয়াদ 30 দিন \n\n
+       7 জিবি <b><font color="#147ED3"> 299 টাকা </font></b> মেয়াদ 30 দিন \n\n
        12 জিবি <b><font color="#147ED3"> 349 টাকা </font></b> মেয়াদ 30 দিন \n\n
        18 জিবি <b><font color="#147ED3"> 399 টাকা </font></b> মেয়াদ 30 দিন \n\n
        35 জিবি <b><font color="#147ED3"> 497 টাকা </font></b> মেয়াদ 30 দিন \n\n
@@ -124,19 +127,20 @@ MB কিনতে <b><font color="#008DFD">*8444#</font></b> অথবা <b><f
 
     <string name="loadtext">এই অফার গুলো শুধুমাত্র রবি জি স্টোর থেকে রিচার্জ করলেই পাবেন অথবা আপনি চাইলে আমাদের কাছ থেকে টাকা পাঠিয়ে কিনে নিতে পারেন। প্যাকেজ গুলো যেভাবে আমাদের কাছ থেকে নিবেন, </string>
     <string name="robi_recharge_offer">
-<b><font color="#147ED3">98 টাকায়</font></b> \n1.5 জিবি + 100 মিনিট মেয়াদ 3 দিন \n\n
-<b><font color="#147ED3">149 টাকায়</font></b> \n7 জিবি + 200 মিনিট মেয়াদ 7 দিন \n\n
+<b><font color="#147ED3">39 টাকায়</font></b> \n1.5 জিবি + 15 মিনিট মেয়াদ 3 দিন \n\n
+<b><font color="#147ED3">98 টাকায়</font></b> \n5 জিবি + 50 মিনিট মেয়াদ 3 দিন \n\n
+<b><font color="#147ED3">149 টাকায়</font></b> \n5 জিবি + 200 মিনিট মেয়াদ 7 দিন \n\n
 
 <b><font color="#147ED3">249 টাকায়</font></b> \n3 জিবি + 200 মিনিট মেয়াদ 30 দিন \n\n
-<b><font color="#147ED3">269 টাকায়</font></b> \n8 জিবি + 250 মিনিট মেয়াদ 30 দিন \n\n
-<b><font color="#147ED3">324 টাকায়</font></b> \n2 জিবি + 525 মিনিট মেয়াদ 30 দিন \n\n
-<b><font color="#147ED3">499 টাকায়</font></b> \n14 জিবি + 400 মিনিট মেয়াদ 30 দিন \n\n
-<b><font color="#147ED3">599 টাকায়</font></b> \n20 জিবি + 500 মিনিট মেয়াদ 30 দিন \n\n
-       <font color="#FF0066"> 600 টাকা দামের উপরের অফারগুলো কিছু কম রাখা যাবে:</font> \n\n
-<b><font color="#147ED3">609 টাকায়</font></b> \n5 জিবি + 1000 মিনিট মেয়াদ 30 দিন \n\n
+<b><font color="#147ED3">269 টাকায়</font></b> \n5 জিবি + 250 মিনিট মেয়াদ 30 দিন \n\n
+<b><font color="#147ED3">297 টাকায়</font></b> \n6 জিবি + 300 মিনিট মেয়াদ 30 দিন \n\n
+<b><font color="#147ED3">397 টাকায়</font></b> \n8 জিবি + 250 মিনিট মেয়াদ 30 দিন \n\n
+
+<b><font color="#147ED3">599 টাকায়</font></b> \n18 জিবি + 400 মিনিট মেয়াদ 30 দিন \n\n
+<b><font color="#147ED3">609 টাকায়</font></b> \n1 জিবি + 1000 মিনিট মেয়াদ 30 দিন \n\n
 <b><font color="#147ED3">719 টাকায়</font></b> \n30 জিবি + 700 মিনিট মেয়াদ 30 দিন \n\n
 <b><font color="#147ED3">799 টাকায়</font></b> \n40 জিবি + 800 মিনিট মেয়াদ 30 দিন \n\n
-<b><font color="#147ED3">899 টাকায়</font></b> \n50 জিবি + 1000 মিনিট মেয়াদ 30 দিন \n\n
+<b><font color="#147ED3">899 টাকায়</font></b> \n45 জিবি + 1000 মিনিট মেয়াদ 30 দিন \n\n
      <b><font color="#147ED3">এই অফার গুলো চিটাগাং বিভাগ বাদে সবাই পাবে...</font></b> </string>
 
 
