--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,12 @@
 <resources>
     <string name="app_name">Robi Internet Offer</string>
 
-    <string name="banner1">ca-app-pub-2518334745896640/2517772927</string>
-    <string name="banner2">ca-app-pub-2518334745896640/6819980019</string>
-    <string name="banner3">ca-app-pub-2518334745896640/8075568972</string>
-    <string name="banner4">ca-app-pub-2518334745896640/7091442753</string>
-    <string name="banner5">ca-app-pub-2518334745896640/2775140839</string>
-    <string name="banner6">ca-app-pub-2518334745896640/4193816671</string>
+    <string name="banner1">ca-app-pub-2518334745896640/5488451894</string>
+    <string name="banner2">ca-app-pub-2518334745896640/8170455559</string>
+    <string name="banner3">ca-app-pub-2518334745896640/9678715010</string>
+    <string name="banner4">ca-app-pub-2518334745896640/4861502603</string>
+    <string name="banner5">ca-app-pub-2518334745896640/4231210543</string>
+    <string name="banner6">ca-app-pub-2518334745896640/3548420931</string>
 
     <string name="i_ads">ca-app-pub-2518334745896640/9258441093</string>
 
@@ -43,21 +43,23 @@ MB কিনতে <b><font color="#008DFD">*8444#</font></b> অথবা <b><f
 
     <string name="robi_minute_offer">
         রবি মিনিট চেক - <b><font color="#009688">*222*2# or *222*3# or *222*8# or *222*9#  (*222*12# sms check) </font></b> \n\n
-        15 মিনিট 10 টাকা মেয়াদ 12 ঘন্টা - <b><font color="#147ED3">\n ডায়াল - *0*1# </font></b> \n\n
-        30 মিনিট 20 টাকা মেয়াদ 2 দিন - <b><font color="#147ED3">\n ডায়াল - *0*16# </font></b> \n\n
-        45 মিনিট 29 টাকা মেয়াদ 2 দিন - <b><font color="#147ED3">\n ডায়াল - *0*2# </font></b> \n\n
-        50 মিনিট 30 টাকা মেয়াদ 2 দিন - <b><font color="#147ED3">\n ডায়াল - *0*9# </font></b> \n\n
-        65 মিনিট 43 টাকা মেয়াদ 4 দিন - <b><font color="#147ED3">\n ডায়াল - *0*3# </font></b> \n\n
-        75 মিনিট 50 টাকা মেয়াদ 5 দিন - <b><font color="#147ED3">\n ডায়াল - *0*10# </font></b> \n\n
-        85 মিনিট 59 টাকা মেয়াদ 5 দিন - <b><font color="#147ED3">\n ডায়াল - *0*8# </font></b> \n\n
+        15 মিনিট 10 টাকা মেয়াদ 1 দিন - <b><font color="#147ED3">\n ডায়াল - *0*6# </font></b> \n\n
+        27 মিনিট 19 টাকা মেয়াদ 1 দিন - <b><font color="#147ED3">\n ডায়াল - *0*12# </font></b> \n\n
+        30 মিনিট 20 টাকা মেয়াদ 2 দিন - <b><font color="#147ED3">\n ডায়াল - *0*7# </font></b> \n\n
+        45 মিনিট 29 টাকা মেয়াদ 3 দিন - <b><font color="#147ED3">\n ডায়াল - *0*5# </font></b> \n\n
+        50 মিনিট 30 টাকা মেয়াদ 2 দিন - <b><font color="#147ED3">\n ডায়াল - *0*11# </font></b> \n\n
+        55 মিনিট 39 টাকা মেয়াদ 3 দিন - <b><font color="#147ED3">\n ডায়াল - *0*3# </font></b> \n\n
+        70 মিনিট 49 টাকা মেয়াদ 4 দিন - <b><font color="#147ED3">\n ডায়াল - *0*3# </font></b> \n\n
+        80 মিনিট 59 টাকা মেয়াদ 5 দিন - <b><font color="#147ED3">\n ডায়াল - *0*2# </font></b> \n\n
 
-        100 মিনিট 69 টাকা মেয়াদ 7 দিন - <b><font color="#147ED3">\n ডায়াল - *0*4# </font></b> \n\n
-        150 মিনিট 99 টাকা মেয়াদ 7 দিন - <b><font color="#147ED3">\n ডায়াল - *0*5# </font></b> \n\n
-        200 মিনিট 127 টাকা মেয়াদ 10 দিন - <b><font color="#147ED3">\n ডায়াল - *0*15# </font></b> \n\n
+        95 মিনিট 69 টাকা মেয়াদ 7 দিন - <b><font color="#147ED3">\n ডায়াল - *0*1# </font></b> \n\n
+        150 মিনিট 99 টাকা মেয়াদ 7 দিন - <b><font color="#147ED3">\n ডায়াল - *0*0# </font></b> \n\n
+        200 মিনিট 127 টাকা মেয়াদ 10 দিন - <b><font color="#147ED3">\n ডায়াল - *0*8# </font></b> \n\n
+        200 মিনিট 146 টাকা মেয়াদ 15 দিন - <b><font color="#147ED3">\n ডায়াল - *0*13# </font></b> \n\n
+        210 মিনিট 169 টাকা মেয়াদ 15 দিন - <b><font color="#147ED3">\n ডায়াল - *0*14# </font></b> \n\n
+        250 মিনিট + 1GB 198 টাকা মেয়াদ 30 দিন - <b><font color="#147ED3">\n ডায়াল - *0*9# </font></b> \n\n
+        530 মিনিট + 1GB 358 টাকা মেয়াদ 30 দিন - <b><font color="#147ED3">\n ডায়াল - *0*10# </font></b> \n\n
 
-        270 মিনিট 199 টাকা মেয়াদ 30 দিন - <b><font color="#147ED3">\n ডায়াল - *0*14# </font></b> \n\n
-        330 মিনিট 218 টাকা মেয়াদ 30 দিন - <b><font color="#147ED3">\n ডায়াল - *0*12# </font></b> \n\n
-        360 মিনিট 220 টাকা মেয়াদ 30 দিন - <b><font color="#147ED3">\n ডায়াল - *0*13# </font></b> \n\n
         500 মিনিট 307 টাকা মেয়াদ 30 দিন - <b><font color="#147ED3">\n ডায়াল - *0*11# </font></b> </string>
 
 
@@ -69,7 +71,7 @@ MB কিনতে <b><font color="#008DFD">*8444#</font></b> অথবা <b><f
         850 MB 41 টাকা মেয়াদ 3 দিন  <b><font color="#147ED3">\n ডায়াল - *123*41# </font></b> \n\n
         1.5 জিবি 57 টাকা মেয়াদ 3 দিন  <b><font color="#147ED3">\n ডায়াল - *123*57# </font></b> \n\n
         3 জিবি 58 টাকা মেয়াদ 3 দিন (Daily 1GB)  <b><font color="#147ED3">\n ডায়াল - *123*58# </font></b> \n\n
-        4 জিবি 68 টাকা মেয়াদ 3 দিন  <b><font color="#147ED3">\n ডায়াল - *123*68# </font></b> \n\n
+        2.5 জিবি 68 টাকা মেয়াদ 3 দিন  <b><font color="#147ED3">\n ডায়াল - *123*68# </font></b> \n\n
         7 জিবি 89 টাকা মেয়াদ 3 দিন  <b><font color="#147ED3">\n ডায়াল - *123*89# </font></b> \n\n
 
         3 জিবি 114 টাকা মেয়াদ 7 দিন  <b><font color="#147ED3">\n ডায়াল - *123*114# </font></b> \n\n
@@ -82,44 +84,64 @@ MB কিনতে <b><font color="#008DFD">*8444#</font></b> অথবা <b><f
         12 জিবি 349 টাকা মেয়াদ 30 দিন  <b><font color="#147ED3">\n ডায়াল - *123*349# </font></b> \n\n
         18 জিবি 399 টাকা মেয়াদ 30 দিন  <b><font color="#147ED3">\n ডায়াল - *123*399# </font></b> \n\n
         30 জিবি 497 টাকা মেয়াদ 30 দিন  <b><font color="#147ED3">\n ডায়াল - *123*497# </font></b> \n\n
-        45 জিবি 598 টাকা মেয়াদ 30 দিন  <b><font color="#147ED3">\n ডায়াল - *123*598# </font></b> \n\n
+        50 জিবি 598 টাকা মেয়াদ 30 দিন  <b><font color="#147ED3">\n ডায়াল - *123*598# </font></b> \n\n
         60 জিবি 698 টাকা মেয়াদ 30 দিন  <b><font color="#147ED3">\n ডায়াল - *123*698# </font></b> </string>
 
 
 
     <string name="robi_minute_recharge">
         রবি মিনিট চেক - <b><font color="#009688"> *222*2# or *222*3# or *222*8# or *222*9# \n\n</font></b>
+        <b><font color="#147ED3"> 19 টাকায় </font></b>\n 27 মিনিট মেয়াদ - 1 দিন \n\n
         <b><font color="#147ED3"> 29 টাকায় </font></b>\n 45 মিনিট মেয়াদ - 2 দিন \n\n
+        <b><font color="#147ED3"> 39 টাকায় </font></b>\n 55 মিনিট মেয়াদ - 3 দিন \n\n
 
-        <b><font color="#147ED3"> 49 টাকায় </font></b>\n 75 মিনিট মেয়াদ - 7 দিন \n\n
+        <b><font color="#147ED3"> 49 টাকায় </font></b>\n 70 মিনিট মেয়াদ - 4 দিন \n\n
+        <b><font color="#147ED3"> 59 টাকায় </font></b>\n 80 মিনিট মেয়াদ - 5 দিন \n\n
+
         <b><font color="#147ED3"> 65 টাকায় </font></b>\n 95 মিনিট মেয়াদ - 7 দিন \n\n
-        <b><font color="#147ED3"> 69 টাকায় </font></b>\n 100 মিনিট মেয়াদ - 7 দিন \n\n
+        <b><font color="#147ED3"> 69 টাকায় </font></b>\n 95 মিনিট মেয়াদ - 7 দিন \n\n
 
+        <b><font color="#147ED3"> 99 টাকায় </font></b>\n 150 মিনিট মেয়াদ - 7 দিন \n\n
         <b><font color="#147ED3"> 108 টাকায় </font></b>\n 180 মিনিট মেয়াদ - 7 দিন \n\n
         <b><font color="#147ED3"> 127 টাকায় </font></b>\n 200 মিনিট মেয়াদ - 10 দিন \n\n
-        <b><font color="#147ED3"> 146 টাকায় </font></b>\n 210 মিনিট মেয়াদ - 15 দিন \n\n
 
         <b><font color="#147ED3"> 109 টাকায় </font></b>\n 165 মিনিট মেয়াদ - 30 দিন \n\n
-        <b><font color="#147ED3"> 169 টাকায় </font></b>\n 220 মিনিট মেয়াদ - 30 দিন \n\n
-        <b><font color="#147ED3"> 307 টাকায় </font></b>\n 500 মিনিট মেয়াদ - 30 দিন </string>
+        <b><font color="#147ED3"> 169 টাকায় </font></b>\n 210 মিনিট মেয়াদ - 30 দিন \n\n
+        <b><font color="#147ED3"> 199 টাকায় </font></b>\n 210 মিনিট মেয়াদ - 30 দিন \n\n
+        <b><font color="#147ED3"> 218 টাকায় </font></b>\n 330 মিনিট মেয়াদ - 30 দিন \n\n
+        <b><font color="#147ED3"> 248 টাকায় </font></b>\n 380 মিনিট মেয়াদ - 30 দিন \n\n
+        <b><font color="#147ED3"> 307 টাকায় </font></b>\n 500 মিনিট মেয়াদ - 30 দিন \n\n
+        <b><font color="#147ED3"> 358 টাকায় </font></b>\n 530 + 1 GB মিনিট মেয়াদ - 30 দিন \n\n
+        <b><font color="#147ED3"> 407 টাকায় </font></b>\n 650 + 1 GB মিনিট মেয়াদ - 30 দিন \n\n
+        <b><font color="#147ED3"> 498 টাকায় </font></b>\n 820 মিনিট মেয়াদ - 30 দিন \n\n
+    <b><font color="#147ED3"> 609 টাকায় </font></b>\n 1000 + 1 GB মিনিট মেয়াদ - 30 দিন </string>
 
 
 
     <string name="robi_internet_recharge">
         এমবি চেক করতে – <b><font color="#009688">\n *3# অথবা *8444*88# </font></b> \n\n
-       1.5 জিবি <b><font color="#147ED3"> 39 টাকা </font></b> মেয়াদ 3 দিন \n\n
-       3 জিবি (Daily 1 GB) <b><font color="#147ED3"> 58 টাকা </font></b> মেয়াদ 3 দিন \n\n
-       4 জিবি <b><font color="#147ED3"> 68 টাকা </font></b> মেয়াদ 3 দিন \n\n
-       7 জিবি <b><font color="#147ED3"> 89 টাকা </font></b> মেয়াদ 3 দিন \n\n
+       1.5 জিবি <b><font color="#147ED3"> 57 টাকা </font></b> মেয়াদ 3 দিন \n\n
+       3 জিবি (Daily 1 GB) <b><font color="#147ED3"> 67 টাকা </font></b> মেয়াদ 3 দিন \n\n
+       3 জিবি <b><font color="#147ED3"> 68 টাকা </font></b> মেয়াদ 3 দিন \n\n
+       5 জিবি <b><font color="#147ED3"> 84 টাকা </font></b> মেয়াদ 3 দিন \n\n
+       6 জিবি (Daily 2 GB) <b><font color="#147ED3"> 88 টাকা </font></b> মেয়াদ 3 দিন \n\n
+       9 জিবি <b><font color="#147ED3"> 96 টাকা </font></b> মেয়াদ 3 দিন \n\n
+       9 জিবি (Daily 3 GB) <b><font color="#147ED3"> 98 টাকা </font></b> মেয়াদ 3 দিন \n\n
+       16 জিবি <b><font color="#147ED3"> 114 টাকা </font></b> মেয়াদ 3 দিন \n\n
 
-       7 জিবি <b><font color="#147ED3"> 129 টাকা </font></b> মেয়াদ 7 দিন \n\n
-       10 জিবি <b><font color="#147ED3"> 148 টাকা </font></b> মেয়াদ 7 দিন \n\n
-       16 জিবি <b><font color="#147ED3"> 178 টাকা </font></b> মেয়াদ 7 দিন \n\n
+       5 জিবি <b><font color="#147ED3"> 129 টাকা </font></b> মেয়াদ 7 দিন \n\n
+       7 জিবি (Daily 1 GB) <b><font color="#147ED3"> 144 টাকা </font></b> মেয়াদ 3 দিন \n\n
+       8 জিবি <b><font color="#147ED3"> 148 টাকা </font></b> মেয়াদ 7 দিন \n\n
+       13 জিবি <b><font color="#147ED3"> 164 টাকা </font></b> মেয়াদ 7 দিন \n\n
+       14 জিবি (Daily 2 GB) <b><font color="#147ED3"> 178 টাকা </font></b> মেয়াদ 3 দিন \n\n
+       20 জিবি <b><font color="#147ED3"> 194 টাকা </font></b> মেয়াদ 7 দিন \n\n
+
+       14 জিবি <b><font color="#147ED3"> 279 টাকা </font></b> মেয়াদ 15 দিন \n\n
 
        7 জিবি <b><font color="#147ED3"> 299 টাকা </font></b> মেয়াদ 30 দিন \n\n
-       12 জিবি <b><font color="#147ED3"> 349 টাকা </font></b> মেয়াদ 30 দিন \n\n
-       18 জিবি <b><font color="#147ED3"> 399 টাকা </font></b> মেয়াদ 30 দিন \n\n
-       35 জিবি <b><font color="#147ED3"> 497 টাকা </font></b> মেয়াদ 30 দিন \n\n
+       12 জিবি <b><font color="#147ED3"> 399 টাকা </font></b> মেয়াদ 30 দিন \n\n
+       24 জিবি <b><font color="#147ED3"> 449 টাকা </font></b> মেয়াদ 30 দিন \n\n
+       28 জিবি <b><font color="#147ED3"> 497 টাকা </font></b> মেয়াদ 30 দিন \n\n
        45 জিবি <b><font color="#147ED3"> 598 টাকা </font></b> মেয়াদ 30 দিন \n\n
        60 জিবি <b><font color="#147ED3"> 698 টাকা </font></b> মেয়াদ 30 দিন </string>
 
@@ -127,20 +149,25 @@ MB কিনতে <b><font color="#008DFD">*8444#</font></b> অথবা <b><f
 
     <string name="loadtext">এই অফার গুলো শুধুমাত্র রবি জি স্টোর থেকে রিচার্জ করলেই পাবেন। প্যাকেজগুলো লোড করার সময় অবশ্যই চেক করে নিবেন, আফারটা আছে কিনা।</string>
     <string name="robi_recharge_offer">
-<b><font color="#147ED3">39 টাকায়</font></b> \n1.5 জিবি + 15 মিনিট মেয়াদ 3 দিন \n\n
-<b><font color="#147ED3">98 টাকায়</font></b> \n5 জিবি + 50 মিনিট মেয়াদ 3 দিন \n\n
-<b><font color="#147ED3">149 টাকায়</font></b> \n5 জিবি + 200 মিনিট মেয়াদ 7 দিন \n\n
+<b><font color="#147ED3">44 টাকায়</font></b> \n1.5 জিবি + 15 মিনিট মেয়াদ 3 দিন \n\n
+<b><font color="#147ED3">46 টাকায়</font></b> \n1 জিবি + 15 মিনিট মেয়াদ 3 দিন \n\n
+<b><font color="#147ED3">79 টাকায়</font></b> \n3 জিবি + 30 মিনিট মেয়াদ 3 দিন \n\n
+<b><font color="#147ED3">107 টাকায়</font></b> \n5 জিবি + 50 মিনিট মেয়াদ 3 দিন \n\n
 
-<b><font color="#147ED3">269 টাকায়</font></b> \n4 জিবি + 200 মিনিট মেয়াদ 30 দিন \n\n
-<b><font color="#147ED3">297 টাকায়</font></b> \n6 জিবি + 300 মিনিট মেয়াদ 30 দিন \n\n
-<b><font color="#147ED3">397 টাকায়</font></b> \n8 জিবি + 250 মিনিট মেয়াদ 30 দিন \n\n
+<b><font color="#147ED3">149 টাকায়</font></b> \n4 জিবি + 200 মিনিট মেয়াদ 7 দিন \n\n
+<b><font color="#147ED3">196 টাকায়</font></b> \n8 জিবি + 150 মিনিট মেয়াদ 7 দিন \n\n
 
-<b><font color="#147ED3">499 টাকায়</font></b> \n16 জিবি + 350 মিনিট মেয়াদ 30 দিন \n\n
+<b><font color="#147ED3">297 টাকায়</font></b> \n5 জিবি + 250 মিনিট মেয়াদ 30 দিন \n\n
+<b><font color="#147ED3">397 টাকায়</font></b> \n10 জিবি + 300 মিনিট মেয়াদ 30 দিন \n\n
+
+<b><font color="#147ED3">499 টাকায়</font></b> \n14 জিবি + 400 মিনিট মেয়াদ 30 দিন \n\n
 <b><font color="#147ED3">599 টাকায়</font></b> \n18 জিবি + 400 মিনিট মেয়াদ 30 দিন \n\n
 <b><font color="#147ED3">609 টাকায়</font></b> \n1 জিবি + 1000 মিনিট মেয়াদ 30 দিন \n\n
-<b><font color="#147ED3">719 টাকায়</font></b> \n30 জিবি + 700 মিনিট মেয়াদ 30 দিন \n\n
-<b><font color="#147ED3">799 টাকায়</font></b> \n40 জিবি + 700 মিনিট মেয়াদ 30 দিন \n\n
+<b><font color="#147ED3">648 টাকায়</font></b> \n25 জিবি + 500 মিনিট মেয়াদ 30 দিন \n\n
+<b><font color="#147ED3">799 টাকায়</font></b> \n35 জিবি + 800 মিনিট মেয়াদ 30 দিন \n\n
 <b><font color="#147ED3">899 টাকায়</font></b> \n45 জিবি + 1000 মিনিট মেয়াদ 30 দিন \n\n
+<b><font color="#147ED3">998 টাকায়</font></b> \n50 জিবি + 1600 মিনিট মেয়াদ 30 দিন \n\n
+<b><font color="#147ED3">1498 টাকায়</font></b> \n75 জিবি + 1800 মিনিট মেয়াদ 30 দিন \n\n
      <b><font color="#147ED3">এই অফার গুলো চিটাগাং বিভাগ বাদে সবাই পাবে...</font></b> </string>
 
 
@@ -151,6 +178,9 @@ MB কিনতে <b><font color="#008DFD">*8444#</font></b> অথবা <b><f
 350 এমবি ইমো প্যাক 20 টাকা  মেয়াদ 3 দিন - *123*56# \n\n
 1 জিবি ইমো প্যাক 55 টাকা  মেয়াদ 28  দিন - *123*056# \n\n
 3 জিবি  ফেইসবুক 95 টাকা  মেয়াদ 30 দিন - *212*717#</string>
+
+
+    <string name="load">যদি কম টাকায় ৩০ দিনে ইন্টারনেট বা মিনিট প্যাকেজ গুলো কিনতে চান, তাহলে <a href="https://wa.me/8801813420461">এখানে ক্লিক করে</a> আমাদের সাথে হোয়াটসঅ্যাপে যোগাযোগ করুন। হোয়াটসঅ্যাপে প্রবেশ করে মেসেজে ক্লিক করে, বলুন আজকের রবির অফার গুলো দেখতে চাই। </string>
 
 
 </resources>
